// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Workflow basic usage 1`] = `
[
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`Workflow basic usage 2`] = `
[
  "b",
  "c",
]
`;

exports[`Workflow basic usage 3`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "status": "done",
    "value": true,
  },
  "d": {
    "status": "done",
    "value": {
      "flag": true,
      "value": 7,
    },
  },
}
`;

exports[`Workflow basic step 1`] = `
[
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`Workflow basic step 2`] = `
[
  "b",
  "c",
]
`;

exports[`Workflow basic step 3`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "schema": {
      [Symbol(TypeBox.Kind)]: "Object",
      "properties": {
        "x": {
          [Symbol(TypeBox.Kind)]: "Number",
          "title": "sweet number",
          "type": "number",
        },
      },
      "required": [
        "x",
      ],
      "type": "object",
    },
    "status": "intr",
    "step": {
      "description": "Enter a number",
      "key": [
        "c",
        "need_number",
      ],
      "schema": {
        [Symbol(TypeBox.Kind)]: "Object",
        "properties": {
          "x": {
            [Symbol(TypeBox.Kind)]: "Number",
            "title": "sweet number",
            "type": "number",
          },
        },
        "required": [
          "x",
        ],
        "type": "object",
      },
    },
  },
  "d": {
    "nodes": [
      "c",
    ],
    "status": "pending",
  },
}
`;

exports[`Workflow basic step 4`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "status": "done",
    "value": true,
  },
  "d": {
    "status": "done",
    "value": {
      "flag": true,
      "value": 7,
    },
  },
}
`;

exports[`Workflow basic step 5`] = `
{
  "a": {
    "status": "done",
    "value": 1,
  },
  "b": {
    "status": "done",
    "value": "hello 1",
  },
  "c": {
    "error": [AssertError: Expected required property],
    "status": "err",
  },
  "d": {
    "nodes": [
      "c",
    ],
    "status": "pending",
  },
}
`;
